# WebApp

./: .dockerignore  .editorconfig  .gitignore  Dockerfile  LICENSE  Makefile  README.md  check_debug_toolbar.py  docker-compose.yml  manage.py  pyproject.toml  requirements.txt  todo.md
.github/workflows/: django.yml
cadevil/: asgi.py  consumers.py  routing.py  settings.py  urls.py  wsgi.py
data/static/css/: style.css  style.min.css
data/static/js/: sidebar.js
data/templates/: base.html  index.html
data/templates/cadevil/: model_comparison.html  model_manager.html  object_view.html
data/templates/registration/: base.html  login.html
landing/: urls.py  views.py
model_editor/: apps.py
model_manager/: apps.py  urls.py  views.py
schema/: prices.csv
src/: manage.py
src/ifc_extractor/: chart_plotter.py  helpers.py
src/landing/: urls.py  views.py
src/model_manager/: admin.py  apps.py  backend.py  consumers.py  forms.py  mixins.py  models.py  routing.py  serializers.py  tasks.py  urls.py  views.py
src/model_manager/ifc_extractor/: __init__.py  chart_plotter.py  data_models.py  energy_modeling.py  helpers.py
src/model_manager/migrations/: 0001_initial.py  0002_alter_cadeviluser_is_staff_and_more.py  0002_alter_materialproperties_name.py  0003_configupload_calculationconfig.py  0003_remove_cadeviluser_active_group.py  0004_alter_calculationconfig_user_and_more.py  0005_alter_configupload_document_alter_configupload_user.py  0006_alter_configupload_user.py
src/model_manager/templatetags/: async_get.py  format_item.py  get_item.py  max_value.py  render_svg.py
src/model_manager/websockets/: backend.py  consumers.py  routing.py  tasks.py
src/resources/static/css/: style.css
src/resources/static/js/: htmx-override.js  htmx.js
src/resources/templates/: base.html  index.html
src/webapp/: __init__.py  asgi.py  celery.py  logger.py  settings.py  urls.py  wsgi.py
static/css/: style.css
static/js/ext/: event-header.js
templates/: base.html  index.html
templates/registration/: login.html  user.html
templates/webapp/: config_editor.html  model_comparison.html  model_manager.html  object_view.html
(+7 files in other folders)
