[project]
name = "cadevil-webapp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "channels>=4.1.0",
    "daphne>=4.1.2",
    "django-celery-results>=2.5.1",
    "django-debug-toolbar>=4.4.6",
    "django-extensions>=3.2.3",
    "django-htmx>=1.19.0",
    "django-stubs>=5.1.0",
    "django>=5.1.2",
    "lark>=1.2.2",
    "pip>=24.2",
    "shapely>=2.0.6",
    "werkzeug>=3.0.4",
]
