[project]
name = "cadevil-webapp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asgiref~=3.8.1",
    "autobahn~=24.4.2",
    "black>=25.1.0",
    "channels~=4.2.0",
    "channels-redis~=4.2.1",
    "daphne~=4.1.2",
    "django~=5.1.4",
    "django-htmx~=1.21.0",
    "djangorestframework~=3.15.2",
    "drf-spectacular~=0.28.0",
    "gunicorn~=22.0.0",
    "ifcopenshell==0.8.1.post1",
    "lark~=1.2.2",
    "legacy-cgi>=2.6.2",
    "mathutils>=3.3.0",
    "openpyxl~=3.1.5",
    "pandas~=2.2.3",
    "pandas-stubs==2.3.0.250703",
    "plotly~=5.24.1rc0",
    "psycopg~=3.2.4",
    "rich~=13.9.4",
    "shapely~=2.0.6",
    "twisted~=23.10.0",
    "uvicorn~=0.32.1",
    "websockets~=10.4",
]
