[project]
name = "cadevil-webapp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asgiref==3.9.1",
    "autobahn~=24.4.2",
    "black>=25.1.0",
    "channels==4.3.1",
    "channels-redis==4.3.0",
    "daphne==4.2.1",
    "django==5.2.5",
    "django-htmx==1.23.2",
    "djangorestframework==3.16.1",
    "drf-spectacular~=0.28.0",
    "gunicorn~=23.0.0",
    "ifcopenshell==0.8.3.post2",
    "lark~=1.2.2",
    "legacy-cgi>=2.6.2",
    "mathutils>=3.3.0",
    "openpyxl~=3.1.5",
    "pandas==2.3.2",
    "pandas-stubs==2.3.0.250703",
    "plotly==6.3.0",
    "psycopg~=3.2.4",
    "rich==14.1.0",
    "shapely==2.1.1",
    "twisted==25.5.0",
    "uvicorn==0.35.0",
    "websockets==15.0.1",
]
